--- a/source/package.json
+++ b/source/package.json
@@ -15,12 +15,12 @@
   ],
   "stack": {
     "stackname": "DUS",
-    "region": "%%REGION%%"
+    "region": "us-east-1"
   },
   "cicd": "false",
   "isROMode": "false",
   "enableKendra": "false",
-  "email": "%%USER_EMAIL%%",
+  "email": "dusdev@jpsco.com",
   "scripts": {
     "bootstrap": "AWS_REGION=$npm_package_stack_region USER_EMAIL=$npm_package_email cdk bootstrap --toolkit-stack-name DocumentUnderstandingCDKToolkit",
     "compile-ts-stacks": "yarn compile-ts-backend-stack && yarn compile-ts-client-stack",
